@@ -1,4 +1,5 @@
 6.0
+	+ Disable systemd-resolved
 	+ Import network configuration from netplan if present
 	+ Fix Mason template paths
 	+ Avoid conflict with new netplan in Ubuntu 18.04
